--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -24,13 +24,23 @@ html
       div.head-bottom-line
 
   body 
-    .nav-button
-      .butt-info 
-        //p.sss ℹ️ 
-        p Информация о проекте и его создателях
-      .butt-all-pants
-        //p.sss🪴 
-        p Все растения
+    .nav-menu-bar 
+      .decr-nav-menu 
+        span Меню
+      .content-nav-menu
+        .nav-nav-menu
+          .butt-info 
+            //p.sss ℹ️ 
+            span Информация о проекте и его создателях
+          .butt-all-pants
+            //p.sss🪴 
+            span Все растения
+        .butt-develop-mode 
+          span Параметры разработчика
+          .swither-dev-mode
+            .circle-dev-mode
+        .butt-hide-menu
+          span Свернуть меню
     
     // Тут будут все элементы с вопросами
     .main-body 
