39 - 11.11.2023 - Сделал и отладил меню

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -25,9 +25,10 @@ html
 
   body 
     .nav-menu-bar 
-      .decr-nav-menu 
+      .decr-nav-menu
         span Меню
       .content-nav-menu
+        span.sp-4 Меню:
         .nav-nav-menu
           .butt-info 
             //p.sss ℹ️ 
