--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -30,14 +30,11 @@ html
         span.sp-4 Меню:
         .nav-nav-menu
           .butt-info 
-            //p.sss ℹ️ 
+            img(src="img/smile/Imf.png")
             span.go-to-page-2 Информация о проекте и его создателях
-            //a(href="page_2.html") Информация о проекте и его создателях
           .butt-all-pants
-            //p.sss🪴 
-            //span Все растения
+            img(src="img/smile/Plant.png")
             span.go-to-page-3 Все растения
-            //a(href="page_3.html") Все растения
         .butt-develop-mode 
           span Параметры разработчика
           .swither-dev-mode
