43 - 13.11.2023 - Сделал кнопку загрузить ещё, и подправил БД

--- a/app/pug/page_3.pug
+++ b/app/pug/page_3.pug
@@ -14,127 +14,28 @@ html
       div.head-bottom-line
 
   body 
-    .simple-text-block.obozn-1
-      p.ssrr Описание обозначений:
-      span Климат: 
-      img(src="img/smile/Trop.png")
-      span - Тропический,
-      img(src="img/smile/Subtr.png")
-      span - Субтропический,
-      img(src="img/smile/Um.png")
-      span - Умеренный
-      
-      div
-      span __ ℃
-      img(src="img/smile/LT.png")
-      span - Любимая температура, 
-      img(src="img/smile/MT.png")
-      span - Минимальная температура
+    .go-back-to-main#main-2
+      span На главную
 
-      div
-      span Влажность:
-      img(src="img/smile/Hum1.png")
-      span - Низкая,
-      img(src="img/smile/Hum2.png")
-      span - Средняя,
-      img(src="img/smile/Hum3.png")
-      span - Высокая
-
-      div
-      span Любит ли солнце:
-      img(src="img/smile/Sun1.png")
-      span - Да,
-      img(src="img/smile/Sun2.png")
-      span - Средне,
-      img(src="img/smile/Sun3.png")
-      span - Не любит
-
-      div
-      span Плодоносное?
-      img(src="img/smile/PlodY.png")
-      span - Да,
-      img(src="img/smile/PlodN.png")
-      span - Нет
-
-      div
-      span Сколько дней выдержит без полива? __ дн.
-      img(src="img/smile/Pol.png")
-
-      div
-      span Как много кислорода вырабатывает? [от 1 до 10]
-      img(src="img/smile/O2.png")
-
-      div
-      img(src="img/smile/Home.png")
-      span - Домашнее,
-      img(src="img/smile/Outs.png")
-      span - Уличное
-
-      div
-      span Если Аллелопатия отрицательная:
-      img(src="img/smile/All.png")
-
-      .add-info-2
-        span i
-        //.dfrd
-
-      p.ssrr Ну что, во всём разобрались? Тогда поехали!)
-
-    //- .simple-text-block 
-    //-   .block-request  
-    //-     .req 
-    //-       p Текст запроса: 
-    //-     .answ 
-    //-       p Ответ БД
-    //-   .load-req 
-    //-     span Загрузить все растения
-    .card-holder 
-      .card1
-        .name 
-          span Фикус каучуконосный (эластичный)
-        .other 
-          //- img(src="img/all-plants-photo/Растение Аспарагус.jpg")
-          img(src="img/all-plants-photo/Растение Агапантус.jpg")
-          .haract 
-            .klimat 
-              span Климат: 
-              img(src="img/smile/Subtr.png")
-            .other-har 
-              div.dsa
-                img(src="img/smile/LT.png")
-                span 22℃                
-              div.dsa
-                img(src="img/smile/MT.png")
-                span 22℃                
-              div.dsa
-                img(src="img/smile/Pol.png")
-                span 14  
-              div.dsa
-                img(src="img/smile/O2.png")
-                span 7  
-              img(src="img/smile/Sun2.png")
-              img(src="img/smile/PlodN.png")
-              img(src="img/smile/Hum2.png")
-              img(src="img/smile/Outs.png")
-              img(src="img/smile/All.png")
-
-
-
+    .card-holder
       //- .card
       //-   img(src="img/all-plants-photo/Растение Аспарагус.jpg")
-      //-   .haract
-      //-     .hhh1
-      //-       span Название растения
-      //-       span Климат: 
-      //-     .hhh2
-      //-       span ЛТ 
-      //-       span МТ 
-      //-       span Вл 
-      //-       span ЛС 
-      //-       span Алл 
-      //-       span Полд 
-      //-       span Кс 
-      //-       span Ул 
+      //-   span Псевдоэрантемум
+      //- .card
+      //-   img(src="img/all-plants-photo/Растение Аспарагус.jpg")
+      //-   span Название растения
+      //- .card
+      //-   img(src="img/all-plants-photo/Растение Аспарагус.jpg")
+      //-   span Название растения
+      //- .card
+      //-   img(src="img/all-plants-photo/Растение Аспарагус.jpg")
+      //-   span Название растения
+      //- .card
+      //-   img(src="img/all-plants-photo/Растение Аспарагус.jpg")
+      //-   span Название растения
+      //- .card
+      //-   img(src="img/all-plants-photo/Растение Аспарагус.jpg")
+      //-   span Название растения
       //- .card
       //-   img(src="img/all-plants-photo/Растение Аспарагус.jpg")
       //-   span Название растения
@@ -160,10 +61,13 @@ html
       //-   img(src="img/all-plants-photo/Растение Аспарагус.jpg")
       //-   span Название растения
 
-      
-      
+    .please-wait
+      span Подождите...
 
-    .go-back-to-main 
+    .load-more
+      span Показать ещё
+
+    .go-back-to-main#main-1 
       span На главную
     
   footer 
