45 - 13.11.2023 - Сделал выбор одного растения

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -350,14 +350,14 @@ body
 	border solid 5px #20f00d
 	span
 		font-style: italic
-		letter-spacing: 0.04em
+		//letter-spacing: 0.04em
 
 .butt-start:active
 	background #20f00d
 	//font-weight: bold
 	span
 		//letter-spacing: -0.05em
-		font-weight: bold
+		//font-weight: bold
 
 // .butt-final:hover, .butt-final-2:hover
 // 	background bg-blue
@@ -668,8 +668,8 @@ body
 	font-style: italic 
 .butt-final:active, .butt-final-2:active
 	//font-weight: bold
-	border solid 3px black
-	letter-spacing: -0.05em 
+	//border solid 3px black
+	//letter-spacing: -0.05em 
 
 // .butt-final:hover, .butt-final-2:hover
 // 	border solid 6px bg-blue
@@ -939,6 +939,10 @@ body
 	justify-items: center;
 	align-items: center;
 	width 77%
+	padding-left 10px
+	.card
+		width 190px
+		margin-left 5px
 
 .down-block-4
 	//bord()
@@ -964,9 +968,12 @@ body
 	justify-items: center;
 	align-items: center;
 	img	
+		margin-top 20px
 		box-shadow: none
-		width: 85%
+		width: 95%
 		height 100%
+		// height auto
+		// max-height: 100%
 		//overflow: hidden;
 	span
 		font-size: 21px
