46 - 13.11.2023 - Начал делать мобильную версию

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -15,12 +15,12 @@ html
 
     script(src="js/mainTerminal.js")
     
-    header 
-      div.bg-fone-header
-      div.head-title
+    header.header
+      .bg-fone-header
+      .head-title
         p Подбор растений для дома
       
-      div.head-bottom-line
+      .head-bottom-line
 
   body 
     .nav-menu-bar 
