46 - 13.11.2023 - Пофиксил текст на 2й странице

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -15,12 +15,12 @@ html
 
     script(src="js/mainTerminal.js")
     
-    header.header
-      .bg-fone-header
-      .head-title
+    header 
+      div.bg-fone-header
+      div.head-title
         p Подбор растений для дома
       
-      .head-bottom-line
+      div.head-bottom-line
 
   body 
     .nav-menu-bar 
