--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1355,3 +1355,51 @@ body
 	span
 		font-size: 23px
 
+
+
+// ------------------------------------------------------------- //
+//
+// 					Под мобильные телефоны: 
+//
+// ------------------------------------------------------------- //
+
+
+@media (max-width: 650px) 
+	html
+		p, span
+			//color red
+
+	.header
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		position: relative;
+		.head-title
+			margin 35px
+			padding-bottom: 20px
+			p
+				//font-size: 7vw;
+				font-size: 30px;
+				
+		.head-bottom-line
+			position: absolute;
+			bottom: 0px;
+
+	.nav-menu-bar
+		//bord()
+		margin 5px auto
+		.decr-nav-menu
+			width 85%
+			border solid 3px bg-2
+			border-radius: 12.5px
+			span
+				font-size: 20px
+		.content-nav-menu
+			display: grid
+			.nav-nav-menu
+				grid-template-columns: 1fr
+				.butt-info, .butt-all-pants
+					align-self: center;
+					width 95%
+					margin 15px
+					height 60px
