--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1386,6 +1386,7 @@ body
 			bottom: 0px;
 
 	.nav-menu-bar
+
 		//bord()
 		margin 5px auto
 		.decr-nav-menu
@@ -1403,3 +1404,18 @@ body
 					width 95%
 					margin 15px
 					height 60px
+				.butt-info
+					margin-bottom 0px
+					margin-left 10px
+					height 70px
+				.butt-all-pants
+					margin-right 10px
+				img
+					width 25px
+					height auto
+		span
+			//color red
+			font-size: 18px
+		.sp-4
+			color black
+			font-style: italic
