--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -51,7 +51,7 @@ html
           p.pp1 Этот инструмент подберёт для вас <b>самое <i>лучшее</i> растение</b>
           p Вам нужно будет ответить всего на <u><i>несколько</i></u> вопросов
           p.pp3 Ну что, вы готовы <b>начинать?</b> 🚀
-          div.butt-start
+          .butt-start
             span Запустить 
           
 
