52 - 13.11.2023 - Вроде как оптимизировал 1ю страницу

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -214,7 +214,7 @@ html
         span Подождите...
 
       .reauest-2-only-color
-        span Мы не смогли найти растения с таким цветом, и характеристиками, что вы указали. 
+        span К сожалению, мы не смогли найти растения с таким цветом, и характеристиками, что вы указали. 
         span Но мы можем показать вам все растения с выбранными вами цветами, вне зависимости от характеристик:
 
       .result-cards   
