--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1487,7 +1487,40 @@ body
 			//margin-top 500px
 			width 80%
 			//bord()
+	
+	.reauest-2-only-color
+		//color red
+		span
+			font-size: 20px
 
+	.result-cards
+		//color red
+		width 100%
+		//bord()
+		padding 0px
+		.spsp
+			//bord()
+			width 90%
+			span
+				//color red
+				font-size: 20px
+				// margin 0px
+				// padding 0px
+
+		.upper-block-3, .down-block-4
+			all: unset
+			width 90%
+			//bord()
+		.card
+			margin 30px 0px
+			width 100%
+			height 100vw
+			img
+				//bord()
+			span
+				font-size: 6vw
+	.zero-reauest   
+		width 100%
 
 
 
@@ -1502,6 +1535,33 @@ body
 		font-size: 4.5vw
 
 
+@media (min-width: 650px) and (max-width: 950px)
+	.result-cards
+		.spsp
+			span
+				font-size: 3vw
+		width 100%
+		//bord()
+		//color red
+		.upper-block-3, .down-block-4
+			width 90%
+			//bord()
+			//gap: 0px;
+			//grid-row-gap: 0px;
+		.upper-block-3
+			width 77%
+		.down-block-4
+			width 100%
+			margin 0px
+		.card
+			width 19vw
+			height 28vw
+			margin 5px
+			//padding 0px
+	.zero-reauest   
+		width 100%
+
+	
 @media (min-width: 400px) and (max-width: 650px)
 	html 
 		p, span 
