53 - 13.11.2023 - Законичл делать мобильную версию сайта проекта

--- a/app/pug/page_2.pug
+++ b/app/pug/page_2.pug
@@ -8,7 +8,7 @@ html
 
     header 
       div.bg-fone-header
-      div.head-title
+      div.head-title.hhhh2
         p Подбор растений для дома
       
       div.head-bottom-line
