--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1522,7 +1522,29 @@ body
 	.zero-reauest   
 		width 100%
 
+	.simple-text-block
+		p, a
+			font-size: 16px
+			//color red
 
+	.go-back-to-main 
+		width 90%
+
+	.card-holder
+		grid-template-columns: repeat(auto-fill, minmax(115px, 1fr));
+		//bord()
+		gap: 3px;
+		grid-row-gap: 0px;
+		padding 0px
+		.card
+			//margin 0px
+			color red
+			height 170px
+			width 115px
+			span
+				font-size: 14px
+				margin-top 8px
+				//bord()
 
 
 
@@ -1560,6 +1582,13 @@ body
 			//padding 0px
 	.zero-reauest   
 		width 100%
+	.nav-nav-menu
+		span	
+			font-size: 16px
+
+	.go-back-to-main 
+		width 90%
+
 
 	
 @media (min-width: 400px) and (max-width: 650px)
@@ -1570,3 +1599,13 @@ body
 	.head-title
 		p
 			font-size: 30px;
+
+	header
+		position: relative;
+		.hhhh2
+			p
+				margin-top 0px
+		.head-bottom-line
+			position: absolute;
+			bottom: 0px;
+
