--- a/app/pug/page_3.pug
+++ b/app/pug/page_3.pug
@@ -8,7 +8,7 @@ html
 
     header 
       div.bg-fone-header
-      div.head-title
+      div.head-title.hhhh2
         p Подбор растений для дома
       
       div.head-bottom-line
