--- a/app/pug/headCode.pug
+++ b/app/pug/headCode.pug
@@ -2,3 +2,4 @@ meta(charset="UTF-8")
 meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 link(rel="stylesheet", href="css/bootstrap-reboot.min.css")
 link(rel="stylesheet", href="css/main.css")
+<link rel="icon" href="favicon.ico" type="image/x-icon">
