58 - 15.11.2023 - работаю над улучшениями

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -80,7 +80,7 @@ html
         p.letter-abbr a-2
         .butt-bar
           .butt-answ.answ-block-1#block-a-2-butt.good-button
-            p Введите, в ℃
+            p.very-long-01 Введите, в ℃
             input(type='text', placeholder='от 15 до 30').my-input-2
         p.err-inp-2 Нужно ввести число, от 15 до 30
 
