--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -517,6 +517,10 @@ body
 .bad-batton
 	background rgb(231, 14, 14)
 
+
+.very-long-01
+	width 95%
+
 // Тестово устанавливаю цвета для кнопочек:
 
 // #block-a
