59 - 15.11.2023 - Устранил все баги - 1.03

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -214,8 +214,8 @@ html
         span Подождите...
 
       .reauest-2-only-color
-        span К сожалению, мы не смогли найти растения с таким цветом, и характеристиками, что вы указали. 
-        span Но мы можем показать вам все растения с выбранными вами цветами, вне зависимости от характеристик:
+        span К сожалению, мы <i><b>не смогли</i> найти</b> растения с таким цветом, и характеристиками, что вы указали. 
+        span Но мы можем показать вам <b>все</b> растения с выбранными вами цветами, <i>вне зависимости</i> от их характеристик:
 
       .result-cards   
         .spsp
@@ -246,7 +246,7 @@ html
 
       .zero-reauest   
         .spsp
-          span К сожалению, мы не смогли подобрать для вас растение. Попробуйте указать другие параметры
+          span К сожалению, мы <i>не смогли</i> подобрать для вас растение. Попробуйте указать другие параметры
 
       .block-request  
         .req 
@@ -258,5 +258,7 @@ html
         span Пройти ещё раз
 
   footer 
+    .version 
+      p 1.03
     p 
       a(href = 'page_2.html') Кто автор проекта?
