--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -86,6 +86,17 @@ footer
 	a:active
 		color: #7a00cc;
 
+.version
+	position: relative;
+	p	
+		position: absolute;
+		top: 40px;
+		left -15px
+		color gray
+		font-size: 12px
+		//bord()
+
+
 // --------------------- //
 // 		  Header:		 //
 // --------------------- // 
@@ -904,6 +915,7 @@ body
 			text-align: center
 			padding-top 10px
 			//padding-top 35px
+			
 
 // Широкие экраны (десктоп)
 @media (min-width: 950px) 
