61 - 16.11.2023 - Дополнил исправлениями с тестирования Филипа - 1.04

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -29,10 +29,10 @@ html
       .content-nav-menu
         span.sp-4 Меню:
         .nav-nav-menu
-          .butt-info 
+          .butt-info.go-to-page-2
             img(src="img/smile/Imf.png")
             span.go-to-page-2 Информация о проекте и его создателях
-          .butt-all-pants
+          .butt-all-pants.go-to-page-3
             img(src="img/smile/Plant.png")
             span.go-to-page-3 Все растения
         .butt-develop-mode 
@@ -259,6 +259,6 @@ html
 
   footer 
     .version 
-      p 1.03
+      p 1.04
     p 
       a(href = 'page_2.html') Кто автор проекта?
