--- a/app/pug/page_2.pug
+++ b/app/pug/page_2.pug
@@ -18,31 +18,31 @@ html
     .simple-text-block
       p Этот проект - курсовая работа по Проектной деятельности. Вот все, кто его делал:
         
-      a(href='https://vk.com/rozavii').aa1 Кучапина Софья
+      a(href='https://vk.com/rozavii', target="_blank").aa1 Кучапина Софья
       p.nhh  - <b>Дизайнер</b>
       p.ahh
     
-      a(href='https://vk.com/gog.ortey').aa2 Орлов Георгий
+      a(href='https://vk.com/gog.ortey', target="_blank").aa2 Орлов Георгий
       p.nhh  - <b>Менеджер проекта и разработчик</b>
       p.ahh
     
-      a(href='https://vk.com/petroffphil').aa3 Петроф Филипп
+      a(href='https://vk.com/petroffphil', target="_blank").aa3 Петров Филипп
       p.nhh  - <b>Тестировщик</b>
       p.ahh
     
-      a(href='https://vk.com/lrlnaromanova').aa4 Романова Ирина
+      a(href='https://vk.com/lrlnaromanova', target="_blank").aa4 Романова Ирина
       p.nhh  - <b>Аналитик данных</b>
       p.ahh
     
-      a(href='https://vk.com/darovabanditi').aa5 Чащин Трофим
+      a(href='https://vk.com/darovabanditi', target="_blank").aa5 Чащин Трофим
       p.nhh  - <b>Разработчик</b>
       p.ahh
     .simple-text-block 
-      p На данном сайте, сначала пользователь вводит ответы, затем они проеборазуются в нужный SQL-запрос, и отправляются на сервер, в БД
+      p На данном сайте, сначала пользователь вводит ответы, затем они преоборазуются в нужный SQL-запрос, и отправляются на сервер, в БД
       p Затем, когда приходит ответ, они сортируются, и выводятся в виде карточек
     .simple-text-block 
       p Если вы хотите узнать больше об этом проекте - вы можете посетить его GitHub репозиторий:
-      a(href="https://github.com/GogikOrtey/PRIS_Project") https://github.com/GogikOrtey/PRIS_Project
+      a(href="https://github.com/GogikOrtey/PRIS_Project", target="_blank") https://github.com/GogikOrtey/PRIS_Project
       p Там вы сможете найти все материалы данного проекта 
     
     .go-back-to-main 
