66 - 16.11.2023 - Добавил всалывающее окошко, с переходом в Яндекс - 1.11

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -243,6 +243,9 @@ html
           .card
             img(src="img/plant-image/P_07.png")
             span Название растения
+        p
+        .spsp.sp-23
+          span <i>Нажми на карточку, если хочешь узнать больше о растении</i>
 
       .zero-reauest   
         .spsp
@@ -259,6 +262,6 @@ html
 
   footer 
     .version 
-      p 1.05
+      p 1.11
     p 
       a(href = 'page_2.html') Кто автор проекта?
