--- a/app/pug/page_3.pug
+++ b/app/pug/page_3.pug
@@ -17,6 +17,9 @@ html
     .go-back-to-main#main-2
       span На главную
 
+    .spsp.sp-23.sp-24
+      span <i>Нажми на карточку, если хочешь узнать больше о растении</i>
+
     .card-holder
       //- .card
       //-   img(src="img/all-plants-photo/Растение Аспарагус.jpg")
