--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1028,6 +1028,17 @@ body
 		span
 			font-size: 2.3vw;
 
+@media (min-width: 650px) 
+	.spsp.sp-23
+		margin-top 15px
+		span
+			font-size 22px
+			//color red
+
+@media (max-width: 650px) 
+	.spsp.sp-23.sp-24
+		margin-top 15px
+
 // ----------------------------- //
 // 	   Новое меню навигации:     //
 // ----------------------------- // 
