--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1038,6 +1038,12 @@ body
 @media (max-width: 650px) 
 	.spsp.sp-23.sp-24
 		margin-top 15px
+		padding 20px
+		text-align: center;
+		span
+			font-size: 16px			
+			text-align: center
+			//bord()
 
 // ----------------------------- //
 // 	   Новое меню навигации:     //
